# Helios

./: .gitattributes  .gitignore  .gitmodules  README.md  ROSUnityConfig.md  install_dependencies.sh  install_git_lfs.sh  prep_endpoint.sh
UnitTest/: unitTest.py
helios_database/: .env.example  requirements.txt  test_database.py
helios_database/config/: __init__.py
helios_database/models/: __init__.py  base.py  test.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/helios_control/lib/helios_control/: tugbot_controller
install/helios_control/share/ament_index/resource_index/package_run_dependencies/: helios_control
install/helios_control/share/helios_control/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/helios_control/share/helios_control/cmake/: helios_controlConfig.cmake
install/helios_launch/share/ament_index/resource_index/package_run_dependencies/: helios_launch
install/helios_launch/share/ament_index/resource_index/parent_prefix_path/: helios_launch
install/helios_launch/share/helios_launch/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/helios_launch/share/helios_launch/cmake/: helios_launchConfig.cmake
install/helios_launch/share/helios_launch/launch/: robot_launch.py
install/helios_sim/share/ament_index/resource_index/package_run_dependencies/: helios_sim
install/helios_sim/share/ament_index/resource_index/parent_prefix_path/: helios_sim
install/helios_sim/share/helios_sim/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/helios_sim/share/helios_sim/cmake/: helios_simConfig.cmake
install/helios_sim/share/helios_sim/models/: ground_plane.sdf  helios_robot.sdf
install/helios_sim/share/helios_sim/worlds/: warehouse.sdf
shapes/meshes/: shapes.dae
src/: HELIOS_PACKAGE_STRUCTURE.md  ROS_VS_OOP.md
src/common/: common.hpp  core.hpp
src/helios_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/helios_bringup/launch/: helios.launch.py  node_tests.launch.py  spawn_firefighter.launch.py  spawn_heavy_duty.launch.py  spawn_helios.launch.py  spawn_medical_support.launch.py  spawn_scout.launch.py  unity_slam.py
src/helios_bringup/rviz/: nav2_unity.rviz
src/helios_bringup/worlds/: empty_world.world  tree_world.world
src/helios_control/: CMakeLists.txt
src/helios_control/config/: rosbridge_topics.yaml
src/helios_control/src/: tugbot_controller.cpp
src/helios_core/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/helios_core/helios_core/: robot_base.py  robot_firefighter.py
src/helios_core/include/: core.hpp  robot_base.hpp
src/helios_core/include/robot_types/: robot_firefighter.hpp
src/helios_core/include/robots/: core.hpp  robot_base.hpp
src/helios_core/include/utils_kinematics/: robot_kinematics.cpp
src/helios_core/src/robot_implementations/: robot_firefighter.cpp
src/helios_database/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/helios_database/config/: database.py
src/helios_database/models/: robot.py
src/helios_description/: CMakeLists.txt  README.md  README_2.md  package.xml  setup.cfg  setup.py
src/helios_description/launch/: description.launch.py
src/helios_description/meshes/: model.config  model.sdf
src/helios_description/rviz/: urdf_config.rviz
src/helios_description/scripts/: teleop_keyboard.py
src/helios_description/urdf/: base_differential_drive.xacro  firefighter_robot.urdf  firefighter_robot.xacro  gazebo_control.xacro
src/helios_description/urdf/robots/: firefighter_robot.urdf.xacro  gazebo_control.xacro  helios.urdf.xacro  medical_support_robot.urdf.xacro  scout_robot.urdf.xacro  unity_heavy_duty_robot.urdf.xacro  unity_medical_support_robot.urdf.xacro  unity_scout_robot.urdf.xacro
src/helios_description/urdf/robots/Scripts/: DifferentialDriveController.cs  IMUSimulator.cs  LidarSimulator.cs  ThermalCameraPublisher.cs
src/helios_foxglove/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/helios_gazebo/: CMakeLists.txt  package.xml
src/helios_gazebo/worlds/: forest_fire_world.sdf
src/helios_launch/: CMakeLists.txt  package.xml
src/helios_launch/launch/: helios.launch.py  robot_launch.py  spawn_firefighter.launch.py
src/helios_navigation/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/helios_navigation/helios_navigation/odometry/: imu.py  laser_odometry.py  magnetometer.py  wheel_odometry.py  wheel_odometry_kinematics.py
src/helios_navigation/src/odometry/: odometry_motion_model.cpp
src/helios_robot/: CMakeLists.txt  package.xml
src/helios_robot_setup_tf/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/helios_robot_setup_tf/helios_robot_setup_tf/: tf_broadcaster.py  tf_listener.py
src/helios_robot_setup_tf/src/: tf_broadcaster.cpp  tf_listener.cpp
src/helios_sim/: CMakeLists.txt
src/helios_sim/config/: robot_control.yaml
src/helios_sim/urdf/: helios_robot.urdf
src/helios_sim/worlds/: helios_world.sdf  warehouse2.sdf
src/helios_swarm/: CMakeLists.txt  package.xml
src/helios_swarm/include/coordination/: coordination_center.hpp
src/helios_testing/: CMakeLists.txt  package.xml
src/helios_testing/src/: TestUnityIntegration.cpp
src/helios_tests/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/helios_tests/helios_tests/: test_unity_integration.py
src/helios_tests/include/: robot_kinematics.hpp
src/helios_tests/src/: test_kinematics.cpp
src/helios_tests/src/unit_tests/odometry/: test_laser_odom.cpp  test_odom_fusion.cpp  test_wheel_odom_kinematics.cpp
src/helios_utils/: wheel_odom_kinematics.py
src/helios_viz/: CMakeLists.txt  package.xml
src/helios_web_interface/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/helios_webots/worlds/: .basicworld.wbproj  basicworld.wbt
src/robot_controller/robot_controller/: cmd_vel_publisher.py
