<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>helios_launch</name>
<version>0.0.0</version>
<description>Launch files for Helios swarm robotics platform</description>
<maintainer email="jasenhow@gmail.com">Jaden Howard</maintainer>
<license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
 <exec_depend>launch</exec_depend>
 <exec_depend>launch_ros</exec_depend>
 <exec_depend>gazebo_ros</exec_depend>
 <exec_depend>helios_description</exec_depend>
 <exec_depend>ros2launch</exec_depend>
 <exec_depend>helios_testing</exec_depend>

 <test_depend>ament_lint_auto</test_depend>
 <test_depend>ament_lint_common</test_depend>

 <export>
   <build_type>ament_cmake</build_type>
 </export>
</package>