<?xml version="1.0"?>
<package format="3">
  <name>helios_launch</name>
  <version>0.0.0</version>
  <description>The helios_launch package for launching Gazebo simulations</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros_ign_gazebo</depend>
  <depend>helios_sim</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>